--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <p><tt> </tt> 
 </p>
 <table class="imgtable"><tr><td>
-<img src="Yian.JPG" alt="alt text" width="120x" height="150px" />&nbsp;</td>
+<img src="Yian.jpg" alt="alt text" width="120x" height="150px" />&nbsp;</td>
 <td align="left"><p>Yian Yu <br />
   Southern University of Science and Technology <br />
   Department of Statistics and Data Science <br />
