--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <tr valign="top">
 <td id="layout-menu">
     <div class="menu-category">Yian Yu</div>
-    <div class="menu-item"><a href="CV_YianYu.pdf">CV</a></div>
+    <div class="menu-item"><a href="CV-YianYu202504.pdf">CV</a></div>
     </td>
 <td id="layout-content">
 <p><tt> </tt> 
