--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Email: 12031036@mail.sustech.edu.cn <br />
 </p> 
 Hello, I am Yian Yu, a PhD candidate in the Department of Statistics and Data Science at 
 the Unversity of Science and Technology. I am privileged to be under the 
-guidance of <a href="https://faculty.sustech.edu.cn/"> Prof. Jian Qing Shi</a>. 
+guidance of <a href="https://faculty.sustech.edu.cn/"> Prof. Jian Qing Shi</a>. <br />
 
 <b>Research Interests:</b> My research interests integrates statistical modeling with theoretical foundations, machine learning, 
   and data-driven insights to transform complex data into actionable solutions for real-world challenges. 
