--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
 <tr valign="top">
 <td id="layout-menu">
     <div class="menu-category">Yian Yu</div>
+    <div class="menu-item"><a href="index.html" class="current">Home</a></div>
     <div class="menu-item"><a href="CV-YianYu202504.pdf">CV</a></div>
     </td>
 <td id="layout-content">
 <p><tt> </tt> 
 </p>
 <table class="imgtable"><tr><td>
-<img src="Yian.jpg" alt="alt text" width="137.6x" height="150px" />&nbsp;</td>
+<img src="Yian.jpg" alt="alt text" width="140x" height="153px" />&nbsp;</td>
 <td align="left"><p>Yian Yu <br />
-  Southern University of Science and Technology <br />
+  Southern University of Science and Technology (SUSTech), Shenzhen, China <br />
   Department of Statistics and Data Science <br />
   <br />
 Email: 12031036@mail.sustech.edu.cn <br />
@@ -39,52 +40,86 @@ Email: 12031036@mail.sustech.edu.cn <br />
 </td></tr></table>
 </p> 
 Hello, I am Yian Yu, a PhD candidate in the Department of Statistics and Data Science at 
-the Unversity of Science and Technology. I am privileged to be under the 
-guidance of <a href="https://faculty.sustech.edu.cn/"> Prof. Jian Qing Shi</a>. <br />
+SUSTech. I am privileged to be under the guidance of 
+  <a href="https://faculty.sustech.edu.cn/"> Prof. Jian Qing Shi</a>. <br />
 
 <b>Research Interests:</b> My research interests integrates statistical modeling with theoretical foundations, machine learning, 
   and data-driven insights to transform complex data into actionable solutions for real-world challenges. 
   My past and ongoning projects encompasses the following domains:
 <ul>
- <li><p><b> Multimodal large-scale spatio-temporal data modeling
-   with efficient Bayesian computational algorithms (Begin in Aug. 2025).</b>
+ <li><p> Multimodal large-scale spatio-temporal data modeling with efficient Bayesian computational algorithms (Begin in Aug. 2025).
  </p> </li>
- <li><p><b> Irregular functional data analysis with applications (Sept. 2020-Present).</b>
+ <li><p> Irregular functional data analysis with applications (Sept. 2020-Present).
  </p> </li>
-  <li><p><b>Comparison of Treatments with ordinal response in clinical trials (Jan. 2020-July 2022).</b>
+  <li><p> Comparison of Treatments with ordinal response in clinical trials (Jan. 2020-July 2022).
  </p> </li>
- <li><p><b> Questionarie verification (Mar. 2020-Aug. 2023).</b>
+ <li><p> Questionarie verification (Mar. 2020-Aug. 2023).
  </p> </li>
 </ul>
-<b>Research Overview:</b>  My Ph.D. focus on advancing FDA for irregular (data with shape constraints, or varying
- covariance structures), high-dimensional datasets, emphasizing applications in gait data acquired from individ
-uals with neurodegenerative diseases via wearable devices. During this period, I conducted an efficient clinical trail 
+<b>Research Overview:</b> My Ph.D. focus on advancing FDA for irregular (data with shape constraints, or varying
+  covariance structures), high-dimensional datasets, emphasizing applications in gait data acquired from individ
+  uals with neurodegenerative diseases via wearable devices. During this period, I conducted an efficient clinical trail 
   design for compariosons of treatments with ordinal response with sequential monitoring and response-adaptive 
   randomization under the supervisor <a href="https://www.sta.cuhk.edu.hk/shcheung/"> Prof. Siu Hung Cheung </a>.
-Co-developed a novel questionare with Department of Neurology, Shenzhen People's Hospital, I conducted the structual 
-  data analysis and statistically validated it for somatic symptom disorder screening.
+  Co-developed a novel scale Neuo-11 with <a href="https://www.sta.cuhk.edu.hk/shcheung/"> Prof. Yi Guo</a>'s group from 
+  the Department of Neurology, Shenzhen People's Hospital. I conducted the structual data analysis and 
+  statistically validated the scale for somatic symptom disorder screening.
 
 
 <h2> News and Updates </h2>
 <ul>
-  <li><p>
+  <li><p>[Apr. 2025] Our <a href="https://arxiv.org/abs/2504.01313"> paper</a> 
+    has been released at arXiv and submitted to 
+    <b>Journal of the American Statistical Association</b>, proposing an innovative
+    curve-based sampling scheme for the analysis of functional data characterized by 
+    a mixture of covariance structures.
+  </p></li>
+  <li><p>[Dec. 2024] Our <a href="https://www.mdpi.com/1099-4300/26/12/1072"> paper</a> has been 
+    accepted at <b>Entropy</b>, proposing a parametric hierarchical model for functional data 
+    with an elliptical shape and demonstrating its effectiveness through the reconstruction of curve
+    trajectories and novel feature extrations using real-world acceleration data.
+  </p></li>
+    <li><p>[Jan. 2024] Hornor to recieve the Outstanding Graduate Student Award, SUSTech.
+  </p></li>
+  <li><p>[Oct. 2023] Hornor to receive the frist prize (highest award) at 7th National Academic 
+    Forum for Doctoral Students in Statistics, China.
+  </p></li>
+  <li><p>[Aug. 2023] Our <a href="https://doi.org/10.1136/gpsych-2023-101082"> paper</a> has been
+    accepted at <b>Gewneral Psychiatry</b>(BMJ Connections journal), establishing the realiability, 
+    validity and threshold of the Neuro-11 by comparing it with standard questionnaires commonly 
+    used in general hositals for assessing somatic symptom disorder.
+  <li><p>[Dec. 2022] Hornor to receive the National Scholarship for Graduate Students, China.
   </p></li>
   <li><p>
+  [Aug. 2022] Our <a href="https://doi.org/10.1002/sim.9554">paper</a> has been accepted at
+    <b>Statistics in Medicine</b>, proposing the modified latent Weibull model to address the
+    skewed ordinal responses with sequential monotoring and response-adaptive randomization.
   </p></li>
 </ul>
 
 
-<h2>Publications</h2>
+<h2>Publications</h2>(* denotes equal contribution)
 
 <ul>
-  <li><p><b>Y. Yu</b>, 
-  </p></li>
-  <li><p>
+  <li><p><b>Yian Yu</b>, Bo Wang, and Jian Qing Shi. (2025).<a href="https://arxiv.org/abs/2504.01313">
+  Analyzing functional data with a mixture of covariance structures using a 
+  curve-based sampling scheme</a>". arXiv preprint arXiv:2504.01313.
   </p></li>   
-<li><p>
-</p></li>  
-<li><p>
-</p>
+  <li><p><b>Yian Yu</b>, Long Tang, Kang Ren, Zhonglue Chen, Shengdi Chen, and Jian Qing Shi (2024).
+  <a href="https://www.mdpi.com/1099-4300/26/12/1072"> "Bayesian regression analysis 
+  for dependent data with an elliptical shape</a>". Entropy 26(12), 1072.  
+  </p></li>Jian Qing Shi, Yutian Zeng, <b>Yian Yu</b>, et al. (2022). Gait analysis and 
+  neurodegenerative disease classification system software. China, 2022SR1591079[CP]. 
+  (Application Serial No. 2022R11L2175851, Software Copyright Registration Certificate No. 10545278)
+  <li><p>Yian Yu, Cong Xu, Jun jiang Zhong, and Siu Hung Cheung. (2022). 
+  <a href="https://doi.org/10.1002/sim.9554">Comparison of treatments with ordinal responses 
+  in trials with sequential monitoring and response-adaptive randomization</a>. Statistics in Medicine,
+  41(25), 5061-5083.
+  </p></li> 
+  <li><p>Silin Zeng*, <b>Yian Yu</b>*, Jian Qing Shi, Qingshan Geng, Rafael H Llinas, Yi Guo, et al. (2023). 
+  <a href="https://doi.org/10.1136/gpsych-2023-101082">Neuro 11: A new questionnaire for 
+  the assessment of somatic symptom disorder in general hospitals</a>. General Psychiatry, 36(4).
+  </p></li>
 </ul>
 
 <!--
