--- a/index.html
+++ b/index.html
@@ -61,21 +61,19 @@ SUSTech. I am privileged to be under the guidance of
   uals with neurodegenerative diseases via wearable devices. During this period, I conducted an efficient clinical trail 
   design for compariosons of treatments with ordinal response with sequential monitoring and response-adaptive 
   randomization under the supervisor <a href="https://www.sta.cuhk.edu.hk/shcheung/"> Prof. Siu Hung Cheung </a>.
-  Co-developed a novel scale Neuo-11 with <a href="https://www.sta.cuhk.edu.hk/shcheung/"> Prof. Yi Guo</a>'s group from 
-  the Department of Neurology, Shenzhen People's Hospital. I conducted the structual data analysis and 
+  Co-developed a novel scale Neuo-11 with the Department of Neurology, Shenzhen People's Hospital. I conducted the structual data analysis and 
   statistically validated the scale for somatic symptom disorder screening.
 
 
 <h2> News and Updates </h2>
 <ul>
   <li><p>[Apr. 2025] Our <a href="https://arxiv.org/abs/2504.01313"> paper</a> 
-    has been released at arXiv and submitted to 
-    <b>Journal of the American Statistical Association</b>, proposing an innovative
-    curve-based sampling scheme for the analysis of functional data characterized by 
+    has been released at arXiv and submitted to Journal of the American Statistical Association, 
+    proposing an innovative curve-based sampling scheme for the analysis of functional data characterized by 
     a mixture of covariance structures.
   </p></li>
   <li><p>[Dec. 2024] Our <a href="https://www.mdpi.com/1099-4300/26/12/1072"> paper</a> has been 
-    accepted at <b>Entropy</b>, proposing a parametric hierarchical model for functional data 
+    accepted at Entropy, proposing a parametric hierarchical model for functional data 
     with an elliptical shape and demonstrating its effectiveness through the reconstruction of curve
     trajectories and novel feature extrations using real-world acceleration data.
   </p></li>
@@ -85,14 +83,14 @@ SUSTech. I am privileged to be under the guidance of
     Forum for Doctoral Students in Statistics, China.
   </p></li>
   <li><p>[Aug. 2023] Our <a href="https://doi.org/10.1136/gpsych-2023-101082"> paper</a> has been
-    accepted at <b>Gewneral Psychiatry</b>(BMJ Connections journal), establishing the realiability, 
+    accepted at Gewneral Psychiatry (BMJ Connections journal), establishing the realiability, 
     validity and threshold of the Neuro-11 by comparing it with standard questionnaires commonly 
     used in general hositals for assessing somatic symptom disorder.
   <li><p>[Dec. 2022] Hornor to receive the National Scholarship for Graduate Students, China.
   </p></li>
   <li><p>
   [Aug. 2022] Our <a href="https://doi.org/10.1002/sim.9554">paper</a> has been accepted at
-    <b>Statistics in Medicine</b>, proposing the modified latent Weibull model to address the
+    Statistics in Medicine, proposing the modified latent Weibull model to address the
     skewed ordinal responses with sequential monotoring and response-adaptive randomization.
   </p></li>
 </ul>
@@ -106,8 +104,8 @@ SUSTech. I am privileged to be under the guidance of
   curve-based sampling scheme</a>". arXiv preprint arXiv:2504.01313.
   </p></li>   
   <li><p><b>Yian Yu</b>, Long Tang, Kang Ren, Zhonglue Chen, Shengdi Chen, and Jian Qing Shi (2024).
-  <a href="https://www.mdpi.com/1099-4300/26/12/1072"> "Bayesian regression analysis 
-  for dependent data with an elliptical shape</a>". Entropy 26(12), 1072.  
+  <a href="https://www.mdpi.com/1099-4300/26/12/1072"> Bayesian regression analysis 
+  for dependent data with an elliptical shape</a>. Entropy 26(12), 1072.  
   </p></li>Jian Qing Shi, Yutian Zeng, <b>Yian Yu</b>, et al. (2022). Gait analysis and 
   neurodegenerative disease classification system software. China, 2022SR1591079[CP]. 
   (Application Serial No. 2022R11L2175851, Software Copyright Registration Certificate No. 10545278)
