--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </p>
 <table class="imgtable"><tr><td>
 <img src="Yian.jpg" alt="alt text" width="140x" height="153px" />&nbsp;</td>
-<td align="left"><p>Yian Yu <br />
+<td align="left"><p><b>Yian Yu</b> <br />
   Southern University of Science and Technology (SUSTech), Shenzhen, China <br />
   Department of Statistics and Data Science <br />
   <br />
@@ -39,11 +39,23 @@ Email: 12031036@mail.sustech.edu.cn <br />
 </p>
 </td></tr></table>
 </p> 
-Hello, I am Yian Yu, a PhD candidate in the Department of Statistics and Data Science at 
+I am an incoming postdoctoral researcher in the Department of Statistics 
+  at the University of Michigan (Aug. 2025-July 2028), under the mentor of 
+  <a href="https://yangchenfunstatistics.github.io/yangchen.github.io/"> Prof. Yang Chen </a>. 
+  Currently, I am a PhD candidate in the Department of Statistics and Data Science at 
 SUSTech. I am privileged to be under the guidance of 
   <a href="https://faculty.sustech.edu.cn/"> Prof. Jian Qing Shi</a>. <br />
-
-<b>Research Interests:</b> My research interests integrates statistical modeling with theoretical foundations, machine learning, 
+  
+<h2> Education </h2> 
+<ul>
+ <li><p> Ph.D. in Mathematics, SUSTech, Sept.2020-Present (Expected June 2025)
+ </p> </li>
+ <li><p> B.S. in Statistics, SUSTech, Sept. 2016-June 2020
+ </p> </li>
+</ul>  
+  
+<h2> Research Interests </h2>
+  My research interests integrates statistical modeling with theoretical foundations, machine learning, 
   and data-driven insights to transform complex data into actionable solutions for real-world challenges. 
   My past and ongoning projects encompasses the following domains:
 <ul>
