--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-    <div class="menu-category">Yian Yu</div>
+    <div class="menu-category"><h2> Yian Yu </h2></div>
     <div class="menu-item"><a href="index.html" class="current">Home</a></div>
     <div class="menu-item"><a href="CV-YianYu202504.pdf">CV</a></div>
     </td>
@@ -108,7 +108,7 @@ SUSTech. I am privileged to be under the guidance of
 </ul>
 
 
-<h2>Publications</h2>(^1 denotes equal contribution)
+<h2>Publications</h2>(<sup>1<\sup> denotes equal contribution)
 
 <ul>
   <li><p><b>Yian Yu</b>, Bo Wang, and Jian Qing Shi. (2025).<a href="https://arxiv.org/abs/2504.01313">
@@ -126,7 +126,7 @@ SUSTech. I am privileged to be under the guidance of
   in trials with sequential monitoring and response-adaptive randomization</a>. Statistics in Medicine,
   41(25), 5061-5083.
   </p></li> 
-  <li><p>Silin Zeng^1, <b>Yian Yu</b>^1, Jian Qing Shi, Qingshan Geng, Rafael H Llinas, Yi Guo, et al. (2023). 
+  <li><p>Silin Zeng<sup>1<\sup>, <b>Yian Yu</b><sup>1<\sup>, Jian Qing Shi, Qingshan Geng, Rafael H Llinas, Yi Guo, et al. (2023). 
   <a href="https://doi.org/10.1136/gpsych-2023-101082">Neuro 11: A new questionnaire for 
   the assessment of somatic symptom disorder in general hospitals</a>. General Psychiatry, 36(4).
   </p></li>
