--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-    <div class="menu-category"><nobr>Yian Yu</nobr></div>
     <div class="menu-item"><a href="index.html" class="current">Home</a></div>
     <div class="menu-item"><a href="CV-YianYu202504.pdf">CV</a></div>
     </td>
@@ -31,7 +30,7 @@
 </p>
 <table class="imgtable"><tr><td>
 <img src="Yian.jpg" alt="alt text" width="140x" height="153px" />&nbsp;</td>
-<td align="left"><p><h2>Yian Yu</h2> <br />
+<td align="left"><p><b>Yian Yu</b> <br />
   Southern University of Science and Technology (SUSTech), Shenzhen, China <br />
   Department of Statistics and Data Science <br />
   <br />
