--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ SUSTech. I am privileged to be under the guidance of
  </p> </li>
  <li><p> Irregular functional data analysis with applications (Sept. 2020-Present).
  </p> </li>
-  <li><p> Comparison of Treatments with ordinal response in clinical trials (Jan. 2020-July 2022).
+  <li><p> Comparison of treatments with ordinal response in clinical trials (Jan. 2020-July 2022).
  </p> </li>
  <li><p> Questionarie verification (Mar. 2020-Aug. 2023).
  </p> </li>
@@ -112,26 +112,51 @@ SUSTech. I am privileged to be under the guidance of
 
 <ul>
   <li><p><b>Yian Yu</b>, Bo Wang, and Jian Qing Shi. (2025).<a href="https://arxiv.org/abs/2504.01313">
-  Analyzing functional data with a mixture of covariance structures using a 
+  "Analyzing functional data with a mixture of covariance structures using a 
   curve-based sampling scheme</a>". arXiv preprint arXiv:2504.01313.
   </p></li>   
   <li><p><b>Yian Yu</b>, Long Tang, Kang Ren, Zhonglue Chen, Shengdi Chen, and Jian Qing Shi (2024).
-  <a href="https://www.mdpi.com/1099-4300/26/12/1072"> Bayesian regression analysis 
-  for dependent data with an elliptical shape</a>. Entropy 26(12), 1072.  
-  </p></li>Jian Qing Shi, Yutian Zeng, <b>Yian Yu</b>, et al. (2022). Gait analysis and 
-  neurodegenerative disease classification system software. China, 2022SR1591079[CP]. 
+  <a href="https://www.mdpi.com/1099-4300/26/12/1072"> "Bayesian regression analysis 
+  for dependent data with an elliptical shape</a>". Entropy 26(12), 1072.  
+  </p></li>Jian Qing Shi, Yutian Zeng, <b>Yian Yu</b>, et al. (2022). "Gait analysis and 
+  neurodegenerative disease classification system software". China, 2022SR1591079[CP]. 
   (Application Serial No. 2022R11L2175851, Software Copyright Registration Certificate No. 10545278)
-  <li><p>Yian Yu, Cong Xu, Jun jiang Zhong, and Siu Hung Cheung. (2022). 
-  <a href="https://doi.org/10.1002/sim.9554">Comparison of treatments with ordinal responses 
-  in trials with sequential monitoring and response-adaptive randomization</a>. Statistics in Medicine,
+  <li><p><b>Yian Yu</b>, Cong Xu, Jun jiang Zhong, and Siu Hung Cheung. (2022). 
+  <a href="https://doi.org/10.1002/sim.9554">"Comparison of treatments with ordinal responses 
+  in trials with sequential monitoring and response-adaptive randomization</a>". Statistics in Medicine,
   41(25), 5061-5083.
   </p></li> 
   <li><p>Silin Zeng<sup>1</sup>, <b>Yian Yu</b><sup>1</sup>, Jian Qing Shi, Qingshan Geng, Rafael H Llinas, Yi Guo, et al. (2023). 
-  <a href="https://doi.org/10.1136/gpsych-2023-101082">Neuro 11: A new questionnaire for 
-  the assessment of somatic symptom disorder in general hospitals</a>. General Psychiatry, 36(4).
+  <a href="https://doi.org/10.1136/gpsych-2023-101082">"Neuro 11: A new questionnaire for 
+  the assessment of somatic symptom disorder in general hospitals</a>". General Psychiatry, 36(4).
   </p></li>
 </ul>
 
+<h2>Talks</h2>
+<ul>
+  <li><p>"Bayesian Regression Analysis for Elliptical Dependent Variables". Talk at the 2nd Joint Conference on
+ Statistics and Data Science, July 2024, Kunming, China.
+  </p></li>   
+  <li><p>"Bayesian Curve Fitting and Prediction with Ellipsoid-Gaussian Distribution". Talk at the 7th National 
+    Academic Forum, Oct. 2023, Guangzhou, China.
+  </p></li>
+</ul>
+
+<h2>Teaching Assistantships</h2>
+<ul>
+  <li><p>[Summer 2023] Functional Data Analysis (University faculties), Yunnan University. 
+    China mathematics Yuan fund summer school for statistics teachers in western universities.  
+  </p></li>  
+  <li><p>[Spring 2022] Probability and Statistics (Undergraduate), SUSTech.
+  </p></li>
+  <li><p>[Fall 2022] Time Series Analysis (Undergraduate), SUSTech.  
+  </p></li>  
+  <li><p>[Spring 2021] Sample Surveys (Undergraduate), SUSTech.
+  </p></li>
+  <li><p>[Fall 2021] Statistical Linear Models (Undergraduate), SUSTech.
+  </p></li>
+</ul>
+  
 <!--
 <a href="https://clustrmaps.com/site/1byns" title="Visit tracker"> <img src="//www.clustrmaps.com/map_v2.png?d=n1OlKr8u1rVvpTgwSKcYZbSy4Q8ZvQh09brzOygUgbA&cl=ffffff"></a>
 -->
