--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   Department of Statistics and Data Science <br />
   <br />
 Email: 12031036@mail.sustech.edu.cn <br />
+ORCID: 0000-0001-9414-9890 <br />
 </p>
 </td></tr></table>
 </p> 
