--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <div class="menu-item">Yian Yu</div>
     <div class="menu-item"><a href="index.html" class="current">Home</a></div>
     <div class="menu-item"><a href="CV-YianYu202504.pdf">CV</a></div>
+    <div class="menu-item"><a href="https://orcid.org/my-orcid?orcid=0000-0001-9414-9890">ORCID</a></div>
     </td>
 <td id="layout-content">
 <p><tt> </tt> 
@@ -36,7 +37,6 @@
   Department of Statistics and Data Science <br />
   <br />
 Email: 12031036@mail.sustech.edu.cn <br />
-ORCID: 0000-0001-9414-9890 <br />
 </p>
 </td></tr></table>
 </p> 
