--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-    <div class="menu-item">Yian Yu</div>
+    <div style="display: flex; flex-wrap: nowrap;" class="menu-item"><nodr>Yian Yu</div>
     <div class="menu-item"><a href="index.html" class="current">Home</a></div>
     <div class="menu-item"><a href="CV-YianYu202504.pdf">CV</a></div>
+    <div class="menu-item"><a href="https://www.researchgate.net/profile/Yian-Yu?ev=hdr_xprf">ResearchGate</a></div>
     <div class="menu-item"><a href="https://orcid.org/my-orcid?orcid=0000-0001-9414-9890">ORCID</a></div>
     </td>
 <td id="layout-content">
