--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="jemdoc.css" type="text/css" />
     <title>Yian Yu - Academic Homepage</title>
     <style>
+         li {
+        margin-bottom: 0.6em;  /* 原默认约0.4em */
+    }
         .center-image {
             display: block;
             margin-left: auto;
@@ -71,8 +74,8 @@ SUSTech, privileged to be under the guidance of <a href="https://faculty.sustech
  <li>Psychometric scale development and validation.</li>
 </ul>
 <b>Research Overview:</b> My Ph.D. focus on advancing functional data analysis for irregular (data with shape constraints, or varying
-  covariance structures), high-dimensional datasets, emphasizing applications in gait data acquired from individ
-  uals with neurodegenerative diseases via wearable devices. During this period, I conducted an efficient clinical trail 
+  covariance structures), high-dimensional datasets, emphasizing applications in gait data acquired from individuals 
+  with neurodegenerative diseases via wearable devices. During this period, I conducted an efficient clinical trail 
   design for comparisions of treatments with ordinal responses with sequential monitoring and response-adaptive 
   randomization under the supervisor <a href="https://www.sta.cuhk.edu.hk/shcheung/">Prof. Siu Hung Cheung</a>.
   I Co-developed a novel scale Neuo-11 with the Department of Neurology, Shenzhen People's Hospital and conducted the
@@ -82,23 +85,23 @@ SUSTech, privileged to be under the guidance of <a href="https://faculty.sustech
 <h2> News and Updates </h2>
 <ul>
   <li>[Apr. 2025] Our <a href="https://arxiv.org/abs/2504.01313"> paper</a> 
-    has been released at arXiv and submitted to Journal of the American Statistical Association, 
+    has been released at arXiv and submitted to <em>Journal of the American Statistical Association</em>, 
     proposing an innovative curve-based sampling scheme for the analysis of functional data characterized by 
     a mixture of covariance structures.</li>
   <li>[Dec. 2024] Our <a href="https://www.mdpi.com/1099-4300/26/12/1072"> paper</a> has been 
-    accepted at Entropy, proposing a parametric hierarchical model for functional data 
+    accepted at <em>Entropy</em>, proposing a parametric hierarchical model for functional data 
     with an elliptical shape and demonstrating its effectiveness through the reconstruction of curve
     trajectories and novel feature extrations using real-world acceleration data.</li>
-    <li>[Jan. 2024] Hornor to recieve the Outstanding Graduate Student Award, SUSTech.</li>
-  <li>[Oct. 2023] Hornor to receive the frist prize (highest award) at 7th National Academic 
-    Forum for Doctoral Students in Statistics, China.</li>
+    <li>[Jan. 2024] Hornor to recieve the <em>Outstanding Graduate Student Award, SUSTech</em>.</li>
+  <li>[Oct. 2023] Hornor to receive the <em>frist prize (highest award) at 7th National Academic 
+    Forum for Doctoral Students in Statistics, China</em>.</li>
   <li>[Aug. 2023] Our <a href="https://doi.org/10.1136/gpsych-2023-101082"> paper</a> has been
-    accepted at General Psychiatry (BMJ Connections journal), establishing the realiability, 
+    accepted at <em>General Psychiatry (BMJ Connections journal)</em>, establishing the realiability, 
     validity and threshold of the Neuro-11 by comparing it with standard questionnaires commonly 
     used in general hositals for assessing somatic symptom disorder.</li>
-  <li>[Dec. 2022] Hornor to receive the National Scholarship for Graduate Students, China.</li>
+  <li>[Dec. 2022] Hornor to receive the <em>National Scholarship for Graduate Students, China</em>.</li>
   <li>[Aug. 2022] Our <a href="https://doi.org/10.1002/sim.9554">paper</a> has been accepted at
-    Statistics in Medicine, proposing the modified latent Weibull model to address the
+    <em>Statistics in Medicine</em>, proposing the modified latent Weibull model to address the
     skewed ordinal responses with sequential monotoring and response-adaptive randomization.</li>
 </ul>
 
