--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ SUSTech, privileged to be under the guidance of <a href="https://faculty.sustech
   with neurodegenerative diseases via wearable devices. During this period, I conducted an efficient clinical trail 
   design for comparisions of treatments with ordinal responses with sequential monitoring and response-adaptive 
   randomization under the supervisor <a href="https://www.sta.cuhk.edu.hk/shcheung/">Prof. Siu Hung Cheung</a>.
-  I Co-developed a novel scale Neuo-11 with the Department of Neurology, Shenzhen People's Hospital and conducted the
+  I co-developed a novel scale Neuo-11 with the Department of Neurology, Shenzhen People's Hospital and conducted the
   structural data analysis and statistically validated the scale for somatic symptom disorder screening.
 
 
