--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ SUSTech, privileged to be under the guidance of <a href="https://faculty.sustech
     accepted at <em>Entropy</em>, proposing a parametric hierarchical model for functional data 
     with an elliptical shape and demonstrating its effectiveness through the reconstruction of curve
     trajectories and novel feature extrations using real-world acceleration data.</li>
-    <li>[Jan. 2024] Hornor to recieve the <em>Outstanding Graduate Student Award, SUSTech</em>.</li>
+    <li>[Jan. 2024] Hornor to receive the <em>Outstanding Graduate Student Award, SUSTech</em>.</li>
   <li>[Oct. 2023] Hornor to receive the <em>frist prize (highest award) at 7th National Academic 
     Forum for Doctoral Students in Statistics, China</em>.</li>
   <li>[Aug. 2023] Our <a href="https://doi.org/10.1136/gpsych-2023-101082"> paper</a> has been
@@ -102,7 +102,7 @@ SUSTech, privileged to be under the guidance of <a href="https://faculty.sustech
   <li>[Dec. 2022] Hornor to receive the <em>National Scholarship for Graduate Students, China</em>.</li>
   <li>[Aug. 2022] Our <a href="https://doi.org/10.1002/sim.9554">paper</a> has been accepted at
     <em>Statistics in Medicine</em>, proposing the modified latent Weibull model to address the
-    skewed ordinal responses with sequential monotoring and response-adaptive randomization.</li>
+    skewed ordinal responses with sequential monitoring and response-adaptive randomization.</li>
 </ul>
 
 
