--- a/index.html
+++ b/index.html
@@ -48,13 +48,11 @@
     </tr>
 </table>
 
-<P>I am a PhD candidate in the Department of Statistics and Data Science at 
-SUSTech, privileged to be under the guidance of <a href="https://faculty.sustech.edu.cn/"> 
-  Prof. Jian Qing Shi</a>. Beginning Aug. 2025, I will join the 
-  Department of Statistics at the University of Michigan as a 
+<P>I am a PhD candidate in the Department of Statistics and Data Science at SUSTech, 
+  privileged to be under the guidance of <a href="https://faculty.sustech.edu.cn/">Prof. Jian Qing Shi</a>.
+  Beginning Aug. 2025, I will join the Department of Statistics at the University of Michigan as a 
   postdoctoral researcher under the mentorship of 
-  <a href="https://yangchenfunstatistics.github.io/yangchen.github.io/"> 
-    Prof. Yang Chen </a>.</P>
+  <a href="https://yangchenfunstatistics.github.io/yangchen.github.io/">Prof. Yang Chen</a>.</P>
 
   
 <h2>Education</h2> 
@@ -82,7 +80,7 @@ SUSTech, privileged to be under the guidance of <a href="https://faculty.sustech
   structural data analysis and statistically validated the scale for somatic symptom disorder screening.
 
 
-<h2> News and Updates </h2>
+<h2>News and Updates</h2>
 <ul>
   <li>[Apr. 2025] Our <a href="https://arxiv.org/abs/2504.01313"> paper</a> 
     has been released at arXiv and submitted to <em>Journal of the American Statistical Association</em>, 
@@ -107,7 +105,6 @@ SUSTech, privileged to be under the guidance of <a href="https://faculty.sustech
 
 
 <h2>Publications</h2>(<sup>1</sup> denotes equal contribution)
-
 <ul>
   <li><b>Yian Yu</b>, Bo Wang, and Jian Qing Shi. (2025).<a href="https://arxiv.org/abs/2504.01313">
   "Analyzing functional data with a mixture of covariance structures using a 
@@ -129,8 +126,8 @@ SUSTech, privileged to be under the guidance of <a href="https://faculty.sustech
 
 <h2>Talks</h2>
 <ul>
-  <li>"Bayesian Regression Analysis for Elliptical Dependent Variables". Talk at the 2nd Joint Conference on
- Statistics and Data Science, July 2024, Kunming, China.</li>   
+  <li>"Bayesian Regression Analysis for Elliptical Dependent Variables". Talk at the 2nd Joint Conference on 
+    Statistics and Data Science, July 2024, Kunming, China.</li>   
   <li>"Bayesian Curve Fitting and Prediction with Ellipsoid-Gaussian Distribution". Talk at the 7th National 
     Academic Forum, Oct. 2023, Guangzhou, China.</li>
 </ul>
