--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <h2>Education</h2> 
 <ul>
  <li>Ph.D. in Mathematics, SUSTech, (Sept. 2020 – Present) <em>Expected completion: June 2025</em></li>
- <li>B.S. in Statistics, SUSTech (Sept. 2016 – June 2020)</li>
+ <li>B.S. in Statistics, SUSTech, (Sept. 2016 – June 2020)</li>
 </ul>  
   
 <h2>Research Interests</h2>
@@ -111,7 +111,7 @@
   curve-based sampling scheme</a>". arXiv preprint arXiv:2504.01313.</li>   
   <li><b>Yian Yu</b>, Long Tang, Kang Ren, Zhonglue Chen, Shengdi Chen, and Jian Qing Shi (2024).
   <a href="https://www.mdpi.com/1099-4300/26/12/1072"> "Bayesian regression analysis 
-  for dependent data with an elliptical shape</a>". Entropy 26(12), 1072.</li>
+  for dependent data with an elliptical shape</a>". Entropy, 26(12), 1072.</li>
   <li>Jian Qing Shi, Yutian Zeng, <b>Yian Yu</b>, et al. (2022). "Gait analysis and 
   neurodegenerative disease classification system software". China, 2022SR1591079[CP]. 
   (Application Serial No. 2022R11L2175851, Software Copyright Registration Certificate No. 10545278)</li>
