--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="menu-item"><a href="index.html" class="current">Home</a></div>
     <div class="menu-item"><a href="CV-YianYu202504.pdf">CV</a></div>
     <div class="menu-item"><a href="https://www.researchgate.net/profile/Yian-Yu?ev=hdr_xprf">ResearchGate</a></div>
-    <div class="menu-item"><a href="https://orcid.org/my-orcid?orcid=0000-0001-9414-9890">ORCID</a></div>
+    <div class="menu-item"><a href="https://orcid.org/0000-0001-9414-9890">ORCID</a></div>
 </td>
 <td id="layout-content">
 <p><tt> </tt> 
