--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </tr>
 </table>
 
-<P>I am a PhD candidate in the Department of Statistics and Data Science at SUSTech, 
+<P>I received B.S. in Statistics and Ph.D. in Mathematics in the Department of Statistics and Data Science at SUSTech, 
   privileged to be under the guidance of <a href="https://faculty.sustech.edu.cn/">Prof. Jian Qing Shi</a>.
   Beginning Aug. 2025, I will join the Department of Statistics at the University of Michigan as a 
   postdoctoral researcher under the mentorship of 
@@ -57,7 +57,7 @@
   
 <h2>Education</h2> 
 <ul>
- <li>Ph.D. in Mathematics, SUSTech, (Sept. 2020 – Present) <em>Expected completion: June 2025</em></li>
+ <li>Ph.D. in Mathematics, SUSTech, (Sept. 2020 – June 2025) </li>
  <li>B.S. in Statistics, SUSTech, (Sept. 2016 – June 2020)</li>
 </ul>  
   
@@ -82,6 +82,7 @@
 
 <h2>News and Updates</h2>
 <ul>
+  <li>[May. 2025] Hornor to received the top 10 outstanding graduate student award in the College of Science, SUSTech.</li>
   <li>[Apr. 2025] Our <a href="https://arxiv.org/abs/2504.01313"> paper</a> 
     has been released at arXiv and submitted to <em>Journal of the American Statistical Association</em>, 
     proposing an innovative curve-based sampling scheme for the analysis of functional data characterized by 
@@ -112,9 +113,6 @@
   <li><b>Yian Yu</b>, Long Tang, Kang Ren, Zhonglue Chen, Shengdi Chen, and Jian Qing Shi (2024).
   <a href="https://www.mdpi.com/1099-4300/26/12/1072"> "Bayesian regression analysis 
   for dependent data with an elliptical shape</a>". Entropy, 26(12), 1072.</li>
-  <li>Jian Qing Shi, Yutian Zeng, <b>Yian Yu</b>, et al. (2022). "Gait analysis and 
-  neurodegenerative disease classification system software". China, 2022SR1591079[CP]. 
-  (Application Serial No. 2022R11L2175851, Software Copyright Registration Certificate No. 10545278)</li>
   <li><b>Yian Yu</b>, Cong Xu, Jun jiang Zhong, and Siu Hung Cheung. (2022). 
   <a href="https://doi.org/10.1002/sim.9554">"Comparison of treatments with ordinal responses 
   in trials with sequential monitoring and response-adaptive randomization</a>". Statistics in Medicine,
@@ -122,6 +120,12 @@
   <li>Silin Zeng<sup>1</sup>, <b>Yian Yu</b><sup>1</sup>, Jian Qing Shi, Qingshan Geng, Rafael H Llinas, Yi Guo, et al. (2023). 
   <a href="https://doi.org/10.1136/gpsych-2023-101082">"Neuro 11: A new questionnaire for 
   the assessment of somatic symptom disorder in general hospitals</a>". General Psychiatry, 36(4).</li>
+   <li>Jian Qing Shi, Yutian Zeng, <b>Yian Yu</b>, et al. (2022). "Gait analysis and 
+  neurodegenerative disease classification system software". China, 2022SR1591079[CP]. 
+  (Application Serial No. 2022R11L2175851, Software Copyright Registration Certificate No. 10545278)</li>
+  <li>Jian Qing Shi, Siqi Yan, <b>Yian Yu<\b>, Beini Liu, Xiaorui Wang, Lin Tang, and Wenjing Zhao. (2025). Neurode
+generative Disease Analysis Method, Device, and Terminal Based on Multimodal Data. China. (Invention Patent Application
+ No. 2025106436652, Current Status: Accepted, pending authorization)
 </ul>
 
 <h2>Talks</h2>
