--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <h2>News and Updates</h2>
 <ul>
-  <li>[May. 2025] Hornor to received the top 10 outstanding graduate student award in the College of Science, SUSTech.</li>
+  <li>[May. 2025] Hornor to received the <em>Top 10 Outstanding Graduate Student Award</em> in the College of Science, SUSTech.</li>
   <li>[Apr. 2025] Our <a href="https://arxiv.org/abs/2504.01313"> paper</a> 
     has been released at arXiv and submitted to <em>Journal of the American Statistical Association</em>, 
     proposing an innovative curve-based sampling scheme for the analysis of functional data characterized by 
@@ -91,7 +91,7 @@
     accepted at <em>Entropy</em>, proposing a parametric hierarchical model for functional data 
     with an elliptical shape and demonstrating its effectiveness through the reconstruction of curve
     trajectories and novel feature extrations using real-world acceleration data.</li>
-    <li>[Jan. 2024] Hornor to receive the <em>Outstanding Graduate Student Award, SUSTech</em>.</li>
+    <li>[Jan. 2024] Hornor to receive the <em>Outstanding Graduate Student Award</em>, SUSTech.</li>
   <li>[Oct. 2023] Hornor to receive the <em>frist prize (highest award) at 7th National Academic 
     Forum for Doctoral Students in Statistics, China</em>.</li>
   <li>[Aug. 2023] Our <a href="https://doi.org/10.1136/gpsych-2023-101082"> paper</a> has been
