--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <h2>News and Updates</h2>
 <ul>
-  <li>[May. 2025] Hornor to received the <em>Top 10 Outstanding Graduate Student Award</em>, College of Science, SUSTech.</li>
+  <li>[May. 2025] Hornor to receive the <em>Top 10 Outstanding Graduate Student Award</em>, College of Science, SUSTech.</li>
   <li>[Apr. 2025] Our <a href="https://arxiv.org/abs/2504.01313"> paper</a> 
     has been released at arXiv and submitted to <em>Journal of the American Statistical Association</em>, 
     proposing an innovative curve-based sampling scheme for the analysis of functional data characterized by 
