--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </tr>
 </table>
 
-<P>I received B.S. in Statistics and Ph.D. in Mathematics in the Department of Statistics and Data Science at SUSTech, 
+<P>I received a Ph.D. in Mathematics in the Department of Statistics and Data Science at SUSTech, 
   privileged to be under the guidance of <a href="https://faculty.sustech.edu.cn/">Prof. Jian Qing Shi</a>.
   Beginning Aug. 2025, I will join the Department of Statistics at the University of Michigan as a 
   postdoctoral researcher under the mentorship of 
