--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
    <li>Jian Qing Shi, Yutian Zeng, <b>Yian Yu</b>, et al. (2022). "Gait analysis and 
   neurodegenerative disease classification system software". China, 2022SR1591079[CP]. 
   (Application Serial No. 2022R11L2175851, Software Copyright Registration Certificate No. 10545278)</li>
-  <li>Jian Qing Shi, Siqi Yan, <b>Yian Yu<\b>, Beini Liu, Xiaorui Wang, Lin Tang, and Wenjing Zhao. (2025). Neurode
+  <li>Jian Qing Shi, Siqi Yan, <b>Yian Yu</b>, Beini Liu, Xiaorui Wang, Lin Tang, and Wenjing Zhao. (2025). Neurode
 generative Disease Analysis Method, Device, and Terminal Based on Multimodal Data. China. (Invention Patent Application
  No. 2025106436652, Current Status: Accepted, pending authorization)
 </ul>
