--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@ generative Disease Analysis Method, Device, and Terminal Based on Multimodal Dat
 
 <h2>Talks</h2>
 <ul>
+    <li>"Analyzing Functional Data with a Mixture of Covariance Structure Using a Curve-Based Sampling Scheme". Talk at 
+      the 2025 Academic Annual Conference of the Multivariate Analysis Application Committee of China Field Statistics 
+      Research Association, June 2025, Chongqing, China.</li> 
   <li>"Bayesian Regression Analysis for Elliptical Dependent Variables". Talk at the 2nd Joint Conference on 
     Statistics and Data Science, July 2024, Kunming, China.</li>   
   <li>"Bayesian Curve Fitting and Prediction with Ellipsoid-Gaussian Distribution". Talk at the 7th National 
