--- a/index.html
+++ b/index.html
@@ -39,20 +39,21 @@
         </td>
         <td align="left">
             <p><b>Yian Yu</b><br />
-                Department of Statistics and Data Science<br />
-                Southern University of Science and Technology (SUSTech)<br />
-                Shenzhen, China<br />
-                Email: 12031036@mail.sustech.edu.cn
+                Department of Statistics<br />
+                University of Michigan, Ann Arbor<br />
+                Michigan, USA<br />
+                Email: yianyu@umich.edu
             </p>
         </td>
     </tr>
 </table>
 
-<P>I received a Ph.D. in Mathematics in the Department of Statistics and Data Science at SUSTech, 
-  privileged to be under the guidance of <a href="https://faculty.sustech.edu.cn/">Prof. Jian Qing Shi</a>.
-  Beginning Aug. 2025, I will join the Department of Statistics at the University of Michigan as a 
-  postdoctoral researcher under the mentorship of 
-  <a href="https://yangchenfunstatistics.github.io/yangchen.github.io/">Prof. Yang Chen</a>.</P>
+<P>I am a Postdoctoral Research Fellow in the Department of Statistics at the University of Michigan, Ann Arbor 
+  under the mentorship of 
+  <a href="https://yangchenfunstatistics.github.io/yangchen.github.io/">Prof. Yang Chen. </br>
+    
+  Before that, I received a Ph.D. in Mathematics in the Department of Statistics and Data Science at SUSTech, 
+  privileged to be under the guidance of <a href="https://faculty.sustech.edu.cn/">Prof. Jian Qing Shi</a>.</P>
 
   
 <h2>Education</h2> 
