--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
   at the University of Michigan under the mentorship of 
   <a href="https://yangchenfunstatistics.github.io/yangchen.github.io/">Prof. Yang Chen</a>.<br/>
   
-  Before that, I got my Ph.D. degree in Mathematics in the Department of Statistics and Data Science at SUSTech in June, 2025, 
+  Before that, I got my Ph.D. degree in Mathematics in the Department of Statistics and Data Science 
+  at the Southern University of Science and Technology (SUSTech) in June, 2025, 
   privileged to be under the guidance of <a href="https://faculty.sustech.edu.cn/">Prof. Jian Qing Shi</a>.</P>
 
   
