--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <P>I am a Postdoctoral Research Fellow in the Department of Statistics 
   at the University of Michigan under the mentorship of 
-  <a href="https://yangchenfunstatistics.github.io/yangchen.github.io/">Prof. Yang Chen</a>.<br/>
+  <a href="https://yangchenfunstatistics.github.io/yangchen.github.io/">Prof. Yang Chen</a>.<br/><br/>
   
   Before that, I got my Ph.D. degree in Mathematics in the Department of Statistics and Data Science 
   at the Southern University of Science and Technology (SUSTech) in June, 2025, 
@@ -93,7 +93,6 @@
     accepted at <em>Entropy</em>, proposing a parametric hierarchical model for functional data 
     with an elliptical shape and demonstrating its effectiveness through the reconstruction of curve
     trajectories and novel feature extrations using real-world acceleration data.</li>
-    <li>[Jan. 2024] Hornor to receive the <em>Outstanding Graduate Student Award</em>, SUSTech.</li>
   <li>[Oct. 2023] Hornor to receive the <em>frist prize (highest award) at 7th National Academic 
     Forum for Doctoral Students in Statistics, China</em>.</li>
   <li>[Aug. 2023] Our <a href="https://doi.org/10.1136/gpsych-2023-101082"> paper</a> has been
