--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </table>
 
 <P>I am a Postdoctoral Research Fellow in the Department of Statistics 
-  at the University of Michigan under the mentorship of 
+  at the University of Michigan, Ann Arbor, under the mentorship of 
   <a href="https://yangchenfunstatistics.github.io/yangchen.github.io/">Prof. Yang Chen</a>.<br/><br/>
   
   Before that, I got my Ph.D. degree in Mathematics in the Department of Statistics and Data Science 
