--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </tr>
 </table>
 
-<P>I am a Postdoctoral Research Fellow in the Department of Statistics 
+<P>I am a Postdoctoral researcher in the Department of Statistics 
   at the University of Michigan, Ann Arbor, under the mentorship of 
   <a href="https://yangchenfunstatistics.github.io/yangchen.github.io/">Prof. Yang Chen</a>.<br/><br/>
   
